--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -35,4 +36,41 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.top-nav {
+  justify-content: center;
+  display: flex;
+  background-color: #333;
+  padding: 10px;
+  border-top: 2px solid #000;
+}
+
+.top-nav button {
+  padding: 10px 30px;
+  margin: 0 10px;
+  font-size: 1.2rem;
+  background-color: #555;
+  color: white;
+  border: 1px solid #777;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.top-nav button:hover {
+  background-color: #777;
+}
+.top-nav button:disabled {
+  background-color: #444;
+  color: #888;
+  cursor: not-allowed;
+}
+
+.main-content {
+  max-width: 960px;
+  margin: 20px auto;
+}
+
+.top-nav button:hover {
+  background: linear-gradient(90deg, blue, red);
 }
